--- a/index.html
+++ b/index.html
@@ -5,7 +5,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Médicos y Calendario Interactivo</title>
     <style>
-        /* ... (estilos anteriores) ... */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .container {
+            margin-top: 20px;
+            max-width: 800px;
+            width: 100%;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            text-align: center;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+        }
+        .form-group input,
+        .form-group select {
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+        .btn {
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        .btn:hover {
+            background-color: #45a049;
+        }
+        .calendario {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 5px;
+            margin-top: 20px;
+        }
+        .calendario div {
+            padding: 10px;
+            text-align: center;
+            border: 1px solid #ddd;
+            cursor: pointer;
+        }
+        .calendario .header {
+            background-color: #4CAF50;
+            color: white;
+            font-weight: bold;
+        }
+        .calendario .weekend {
+            background-color: #f0f0f0;
+        }
+        .calendario .selected-red {
+            background-color: #ffcccc;
+        }
+        .calendario .selected-yellow {
+            background-color: #ffffcc;
+        }
+        .medico-list {
+            margin-top: 20px;
+        }
+        .medico-item {
+            padding: 10px;
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            margin-bottom: 10px;
+            display: flex;
+            justify-content: space-between;
+        }
+        .delete-btn {
+            background-color: red;
+            color: white;
+            border: none;
+            cursor: pointer;
+            padding: 5px 10px;
+        }
         nav {
             margin-top: 20px;
             display: flex;
@@ -30,8 +118,57 @@
     <div class="container">
         <h2>Registro de Médicos y Calendario Interactivo</h2>
         
-        <!-- ... (contenido anterior) ... -->
+        <!-- Formulario de registro de médicos -->
+        <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <input type="text" id="nombre" placeholder="Nombre del médico">
+        </div>
+        <div class="form-group">
+            <label for="apellidos">Apellidos</label>
+            <input type="text" id="apellidos" placeholder="Apellidos del médico">
+        </div>
+        <div class="form-group">
+            <label for="correo">Correo electrónico</label>
+            <input type="email" id="correo" placeholder="Correo del médico">
+        </div>
+        <button class="btn" onclick="agregarMedico()">Aceptar médico</button>
 
+        <!-- Lista de médicos -->
+        <div class="medico-list" id="medicoList"></div>
+
+        <!-- Selección de médico y fecha para el calendario -->
+        <div class="form-group">
+            <label for="medico">Seleccionar Médico:</label>
+            <select id="medico" onchange="cargarCalendario()"></select>
+        </div>
+        <div class="form-group">
+            <label for="mes">Mes:</label>
+            <select id="mes" onchange="generarCalendario()">
+                <option value="0">Enero</option>
+                <option value="1">Febrero</option>
+                <option value="2">Marzo</option>
+                <option value="3">Abril</option>
+                <option value="4">Mayo</option>
+                <option value="5">Junio</option>
+                <option value="6">Julio</option>
+                <option value="7">Agosto</option>
+                <option value="8">Septiembre</option>
+                <option value="9">Octubre</option>
+                <option value="10">Noviembre</option>
+                <option value="11">Diciembre</option>
+            </select>
+
+            <label for="anio">Año:</label>
+            <select id="anio" onchange="generarCalendario()"></select>
+        </div>
+
+        <!-- Calendario -->
+        <div class="calendario" id="calendario"></div>
+
+        <!-- Botón para guardar los cambios -->
+        <button class="btn" onclick="guardarCambios()">Guardar cambios</button>
+
+        <!-- Navegación a otras páginas -->
         <nav>
             <a href="index.html">Inicio</a>
             <a href="subespecialidades.html">Subespecialidades</a>
@@ -42,7 +179,7 @@
     </div>
 
     <script>
-        // ... (script anterior) ...
+        // ... (El script se mantiene igual que en la penúltima respuesta) ...
     </script>
 </body>
 </html>
