--- a/index.html
+++ b/index.html
@@ -3,79 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de Médicos y Calendario Interactivo</title>
+    <title>Calendario Interactivo - Selección de Disponibilidad</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .container {
-            margin-top: 20px;
-            max-width: 800px;
-            width: 100%;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h2 {
-            text-align: center;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .form-group input,
-        .form-group select {
-            width: 100%;
-            padding: 10px;
-            box-sizing: border-box;
-        }
-        .btn {
-            width: 100%;
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-        .btn:hover {
-            background-color: #45a049;
-        }
-        .calendario {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            gap: 5px;
-            margin-top: 20px;
-        }
-        .calendario div {
-            padding: 10px;
-            text-align: center;
-            border: 1px solid #ddd;
-            cursor: pointer;
-        }
-        .calendario .header {
-            background-color: #4CAF50;
-            color: white;
-            font-weight: bold;
-        }
-        .calendario .weekend {
-            background-color: #f0f0f0;
-        }
-        .calendario .selected-red {
-            background-color: #ffcccc;
-        }
-        .calendario .selected-yellow {
-            background-color: #ffffcc;
-        }
+        /* ... (mantener los estilos existentes) ... */
         .medico-list {
             margin-top: 20px;
         }
@@ -86,6 +16,7 @@
             margin-bottom: 10px;
             display: flex;
             justify-content: space-between;
+            align-items: center;
         }
         .delete-btn {
             background-color: red;
@@ -94,92 +25,111 @@
             cursor: pointer;
             padding: 5px 10px;
         }
-        nav {
-            margin-top: 20px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-        }
-        nav a {
-            margin: 10px;
-            padding: 10px 15px;
-            text-decoration: none;
-            color: white;
-            background-color: #4CAF50;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-        nav a:hover {
-            background-color: #45a049;
-        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>Registro de Médicos y Calendario Interactivo</h2>
+        <h2>Calendario Interactivo - Selección de Disponibilidad</h2>
         
-        <!-- Formulario de registro de médicos -->
-        <div class="form-group">
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" placeholder="Nombre del médico">
-        </div>
-        <div class="form-group">
-            <label for="apellidos">Apellidos</label>
-            <input type="text" id="apellidos" placeholder="Apellidos del médico">
-        </div>
-        <div class="form-group">
-            <label for="correo">Correo electrónico</label>
-            <input type="email" id="correo" placeholder="Correo del médico">
-        </div>
-        <button class="btn" onclick="agregarMedico()">Aceptar médico</button>
-
         <!-- Lista de médicos -->
         <div class="medico-list" id="medicoList"></div>
 
-        <!-- Selección de médico y fecha para el calendario -->
         <div class="form-group">
             <label for="medico">Seleccionar Médico:</label>
-            <select id="medico" onchange="cargarCalendario()"></select>
+            <select id="medico" onchange="generarCalendario()"></select>
         </div>
         <div class="form-group">
             <label for="mes">Mes:</label>
             <select id="mes" onchange="generarCalendario()">
-                <option value="0">Enero</option>
-                <option value="1">Febrero</option>
-                <option value="2">Marzo</option>
-                <option value="3">Abril</option>
-                <option value="4">Mayo</option>
-                <option value="5">Junio</option>
-                <option value="6">Julio</option>
-                <option value="7">Agosto</option>
-                <option value="8">Septiembre</option>
-                <option value="9">Octubre</option>
-                <option value="10">Noviembre</option>
-                <option value="11">Diciembre</option>
+                <!-- ... (opciones de mes existentes) ... -->
             </select>
 
             <label for="anio">Año:</label>
             <select id="anio" onchange="generarCalendario()"></select>
         </div>
 
-        <!-- Calendario -->
-        <div class="calendario" id="calendario"></div>
-
         <!-- Botón para guardar los cambios -->
-        <button class="btn" onclick="guardarCambios()">Guardar cambios</button>
+        <button class="btn-save" onclick="guardarCambios()">Guardar cambios</button>
 
-        <!-- Navegación a otras páginas -->
+        <div class="calendario" id="calendario">
+            <!-- Aquí se generará el calendario -->
+        </div>
+
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="subespecialidades.html">Subespecialidades</a>
-            <a href="consultas.html">Crear Consultas</a>
-            <a href="calendario.html">Calendario Interactivo</a>
-            <a href="calendario-consultas.html">Calendario de Consultas</a>
+            <a href="index.html">Volver al Inicio</a>
         </nav>
     </div>
 
     <script>
-        // ... (El script se mantiene igual que en la penúltima respuesta) ...
+        const medicoSelect = document.getElementById('medico');
+        const medicoList = document.getElementById('medicoList');
+        const calendarioDiv = document.getElementById('calendario');
+        const mesSelect = document.getElementById('mes');
+        const anioSelect = document.getElementById('anio');
+        let calendarioSeleccion = {};
+
+        window.onload = function() {
+            cargarMedicos();
+            cargarAnios();
+            generarCalendario();
+        };
+
+        function cargarMedicos() {
+            const medicos = JSON.parse(localStorage.getItem('medicos')) || [];
+            medicoSelect.innerHTML = '<option value="">Seleccione un médico</option>';
+            medicoList.innerHTML = '';
+            medicos.forEach(medico => {
+                const option = document.createElement('option');
+                option.value = medico.correo;
+                option.textContent = `${medico.nombre} ${medico.apellidos}`;
+                medicoSelect.appendChild(option);
+
+                const medicoItem = document.createElement('div');
+                medicoItem.classList.add('medico-item');
+                medicoItem.innerHTML = `
+                    <span>${medico.nombre} ${medico.apellidos} - ${medico.correo}</span>
+                    <button class="delete-btn" onclick="eliminarMedico('${medico.correo}')">Eliminar</button>
+                `;
+                medicoList.appendChild(medicoItem);
+            });
+        }
+
+        function eliminarMedico(correo) {
+            let medicos = JSON.parse(localStorage.getItem('medicos')) || [];
+            medicos = medicos.filter(m => m.correo !== correo);
+            localStorage.setItem('medicos', JSON.stringify(medicos));
+            cargarMedicos();
+        }
+
+        function cargarAnios() {
+            const anioActual = new Date().getFullYear();
+            for (let i = anioActual - 10; i <= anioActual + 10; i++) {
+                const option = document.createElement('option');
+                option.value = i;
+                option.textContent = i;
+                anioSelect.appendChild(option);
+            }
+            anioSelect.value = anioActual;
+        }
+
+        function generarCalendario() {
+            // ... (mantener la función existente) ...
+        }
+
+        function guardarCambios() {
+            const correoMedico = medicoSelect.value;
+            const mes = mesSelect.value;
+            const anio = anioSelect.value;
+
+            if (!correoMedico) {
+                alert("Por favor, selecciona un médico.");
+                return;
+            }
+
+            const key = `${correoMedico}-${mes}-${anio}`;
+            localStorage.setItem(key, JSON.stringify(calendarioSeleccion));
+            alert("Cambios guardados correctamente.");
+        }
     </script>
 </body>
 </html>
